@@ -41,16 +41,27 @@ mysql:
 # - v1.6.2 is broken: https://github.com/sidorares/node-mysql2/issues/869
 # - v2.2.3 has a github dep ("@types/mysql": "types/mysql") that hits
 #   npm v6 install issue https://github.com/npm/cli/issues/4896
-mysql2-old:
+# - v3: It isn't clear what the min supported Node.js version is. "engines" says
+#   8.0.0, however it uses an lru-cache that supports only node >=16.14! My
+#   guess is the effective min supported node is v14.
+#   See https://github.com/elastic/apm-agent-nodejs/pull/3301#issuecomment-1530138870
+mysql2-v1-v1.6.0:
   name: mysql2
   versions: '>=1.0.0 <1.6.0'
   commands:
     - node test/instrumentation/modules/mysql2/mysql.test.js
     - node test/instrumentation/modules/mysql2/pool-release-1.test.js
-mysql2-new:
+mysql2-v1.6.0-v3:
   name: mysql2
   versions: '>=1.6.0 <1.6.2 || >=1.6.3 <2.2.3 || >=2.2.4 <3'
-  node: '>=6.0.0'
+  node: '>=8.0.0'
+  commands:
+    - node test/instrumentation/modules/mysql2/mysql.test.js
+    - node test/instrumentation/modules/mysql2/pool-release-1.test.js
+mysql2:
+  name: mysql2
+  versions: '>=3.0.0 <4'
+  node: '>=14'
   commands:
     - node test/instrumentation/modules/mysql2/mysql.test.js
     - node test/instrumentation/modules/mysql2/pool-release-1.test.js
